--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div id='home' class='flex-column flex-center'>
             <h1>Coding Quiz</h1>
             <p>The follwing quiz will test your knowledge of coding. 
-                Keep in mind that it is timed. The timer is located in the top right corner</p>
+                Keep in mind that it is timed. The timer is located in the top left corner</p>
                 <div class='buttons'>
-                    <a href="./game.html" class='btn'>Start Quiz</a>
-                    <a href="./highscores.html" class='btn'>High Scores</a>
+                    <a href="game.html" class='btn'>Start Quiz</a>
+                    <a href="highscores.html" class='btn'>High Scores</a>
                 </div>
 
         </div>
