--- a/end.html
+++ b/end.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="assets/style/style.css">
 
 </head>
 <body>
     <div class="container">
-        <div id="end" class="flex-center flex-column">
+        <div id="end" class="flex-column flex-center">
             <h1 id="finalScore">0</h1>
             <form class="end-form-container">
                 <h2 id="end-text">Enter your name below to save your score!</h2>
                 <input type="text" name="name" id="username" placeholder="Enter your name">
-                <button class="btn" id="saveScoreBtn" type="submit" onClick="saveHighScore(event)" disabled>Save</button>
+                <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>
+                Save
+                </button>
             </form>
-            <a href="../game.html" class="btn">Play Again</a>
-            <a href="../index.html" class="btn">Go home</a>
+            <a href="game.html" class="btn">Play Again</a>
+            <a href="index.html" class="btn">Go home</a>
         </div>
     </div>
+    <script src="assets/js/end.js"></script>
 </body>
 </html>
