--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
+    <title>Quiz Homepage</title>
     <link rel="stylesheet" href="assets/style/style.css">
 
 </head>
@@ -13,7 +13,7 @@
     <div class="container">
         <div id='home' class='flex-column flex-center'>
             <h1>Coding Quiz</h1>
-            <p>The follwing quiz will test your knowledge of coding. 
+            <p>The follwing quiz will is a random set of True/False questions. 
                 Keep in mind that it is timed. The timer is located in the top left corner</p>
                 <div class='buttons'>
                     <a href="game.html" class='btn'>Start Quiz</a>
