--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <div id='home' class='flex-column flex-center'>
-            <h1>Coding Quiz</h1>
+            <h1>Random Quiz</h1>
             <p>The follwing quiz will is a random set of True/False questions. 
                 Keep in mind that it is timed. The timer is located in the top left corner</p>
                 <div class='buttons'>
